--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,3 +29,32 @@ jobs:
 
       - name: Submit dependencies
         uses: advanced-security/maven-dependency-submission-action@v1
+  name: Build and Analyze
+
+  on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      security-events: write
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      - name: Submit dependency snapshot
+        uses: advanced-security/maven-dependency-submission-action@v4
