--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,17 +15,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # Build project using Maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      # Submit dependency snapshot to GitHub
       - name: Submit dependency snapshot
         uses: advanced-security/maven-dependency-submission-action@v4
